# mlip-arena

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  app.py  environment.yml  index.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: README.md
.github/workflows/: ci.yaml  release.yaml  requirement.txt  sync-hf.yaml  test.yaml
.streamlit/: config.toml
atomind_mlip/models/: README.md  __init__.py  mace-mp.py  registry.yaml
atomind_mlip/tasks/: registry.yaml
benchmarks/: README.md  asymptotes.py  report.py  shifts.py  stability.py  submit.py  submit_model.py
benchmarks/bzo/: BZO_cubic_prim.xyz  README.md  dft.ipynb  run.ipynb
benchmarks/bzo/pbe/: mode-1.npy  phonopy_params.yaml
benchmarks/c2db/: ALIGNN.parquet  CHGNet.parquet  MACE-MP(M).parquet  MatterSim.parquet  ORBv2.parquet  README.md  SevenNet.parquet  analysis.ipynb  c2db.db  copy.parquet  run.py
benchmarks/combustion/: README.md  run.ipynb
benchmarks/combustion/escn/: eSCN(OC20)_H256O128.json
benchmarks/combustion/mace-mp/: MACE-MPA_H256O128.json
benchmarks/combustion/mattersim/: MatterSim_H256O128.json
benchmarks/diatomics/: run.ipynb
benchmarks/energy_conservation/: run.ipynb  run.py
benchmarks/eos_alloy/: run_Fe-Ni-Cr.ipynb
benchmarks/eos_bulk/: CHGNet.parquet  CHGNet_processed.parquet  M3GNet.parquet  M3GNet_processed.parquet  MACE-MP(M).parquet  MACE-MP(M)_processed.parquet  MatterSim.parquet  NequIP-OAM-L_processed.parquet  ORBv2.parquet  README.md  SevenNet.parquet  aggregate.py  analyze.py  leaderboard.csv  leaderboard.tex  plot.py  preprocessing.py  run.py
benchmarks/ev/: M3GNet.parquet  M3GNet_processed.parquet  MACE-MP(M).parquet  MACE-MPA_processed.parquet  MatterSim_processed.parquet  ORBv2.parquet  ORBv2_processed.parquet  SevenNet.parquet  SevenNet_processed.parquet  aggregate.py  eSEN_processed.parquet  eqV2(OMat)_processed.parquet  leaderboard.csv  leaderboard.tex
benchmarks/force_equivariance/: run.py
benchmarks/mof/: MACE-MPA.pkl  MatterSim.pkl  golddac.ipynb  widom-insertion.ipynb
benchmarks/stability/: README.md  aggregate.py  analysis.py  plot.ipynb  pressure.ipynb  run.py  temperature.ipynb
benchmarks/vacancy_migration/: README.md  analysis.py  run.py
benchmarks/wbm_ev/: ALIGNN.parquet  ALIGNN_processed.parquet  CHGNet.parquet  MatterSim.parquet  eqV2(OMat).parquet  run.py  summary.tex
docs/: development.mdx  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
examples/: wbm_structures.db
examples/c2db/: M3GNet.parquet  MACE-MPA.parquet  analysis.ipynb  run.py
examples/eos_alloy/: run_Fe-Ni-Cr.ipynb
examples/eos_bulk/: CHGNet.parquet  CHGNet_processed.parquet  M3GNet.parquet  M3GNet_processed.parquet  MACE-MP(M).parquet  MACE-MP(M)_processed.parquet  MACE-MPA.parquet  MACE-MPA_processed.parquet  MatterSim.parquet  MatterSim_processed.parquet  ORBv2.parquet  ORBv2_processed.parquet  SevenNet.parquet  SevenNet_processed.parquet  analysis.ipynb  analyze.py  eSEN.parquet  eSEN_processed.parquet  eos_analyzed_CHGNet.json  eos_analyzed_M3GNet.json  eos_analyzed_MACE-MP(M).json  eos_analyzed_MACE-MPA.json  eos_analyzed_MatterSim.json  eos_analyzed_ORBv2.json  eos_analyzed_SevenNet.json  plot.py  run.py  run_new.py  summarized_results.csv  summary.csv  summary.tex
examples/mof/: CHGNet.pkl  M3GNet.pkl  MACE-MP(M).pkl  MACE-MPA.pkl  MatterSim.pkl  ORBv2.pkl  benchmark.ipynb  golddac.ipynb  widom-insertion.ipynb
examples/stability/: plot.ipynb  pressure.ipynb  temperature.ipynb
examples/thermal_conductivity/: thermal-conductivity.ipynb
examples/vacancy_migration/: Table-A1-fcc.csv  Table-A2-hcp.csv
examples/wbm_ev/: ALIGNN.parquet  ALIGNN_processed.parquet  CHGNet.parquet  CHGNet_processed.parquet  EV_scan_analyzed_ALIGNN.json  EV_scan_analyzed_CHGNet.json  EV_scan_analyzed_M3GNet.json  EV_scan_analyzed_MACE-MP(M).json  EV_scan_analyzed_MACE-MPA.json  EV_scan_analyzed_MatterSim.json  EV_scan_analyzed_ORBv2.json  EV_scan_analyzed_SevenNet.json  EV_scan_analyzed_eqV2(OMat).json  M3GNet.parquet  M3GNet_processed.parquet  MACE-MP(M).parquet  MACE-MP(M)_processed.parquet  MACE-MPA.parquet  MACE-MPA_processed.parquet  MatterSim.parquet  MatterSim_processed.parquet  ORBv2.parquet  ORBv2_processed.parquet  SevenNet.parquet  SevenNet_processed.parquet  analysis.ipynb  analyze.py  eSEN.parquet  eqV2(OMat).parquet  eqV2(OMat)_processed.parquet  run.py  summarized_results.csv  summary.csv  summary.tex
mlip_arena/: __init__.py
mlip_arena/classicals/: collate.py  zbl.py
mlip_arena/data/: collate.py  local.py
mlip_arena/flows/: combustion.py  conservation.py  diatomics.py  eos_bulk.py  ev.py  stability.py  wbm_ev.py
mlip_arena/jobs/: __init__.py  run.py
mlip_arena/models/: README.md  __init__.py  chgnet.py  externals.py  mace-mp.py  mace.py  registry.yaml  utils.py
mlip_arena/tasks/: README.md  __init__.py  alexandria.py  diatomics.py  elasticity.py  entropy.py  eos.py  equivariance.py  ev.py  md.py  nacl.py  neb.py  optimize.py  phonon.py  qmof.py  registry.yaml  run.py  utils.py  viscosity.py
scripts/: install-dgl.sh  install-linux.sh  install-macosx.sh  install-perlmutter.sh  install-pyg.sh  install.sh
serve/: app.py  leaderboard.py
serve/models/: bugs.py  leaderboard.py
serve/ranks/: combustion.py  eos_bulk.py  ev.py  homonuclear-diatomics.py  stability.py  thermal-conductivity.py  wbm_ev.py
serve/reports/: alerts.py  dashboard.py
serve/tasks/: combustion.py  eos_bulk.py  ev.py  homonuclear-diatomics.py  stability.py  thermal-conductivity.py  wbm_ev.py
serve/tools/: history.py  ptable.py  search.py
tests/: conftest.py  download_models.py  hf_hub.ipynb  oxygen_diatomics.ipynb  test_app.py  test_combustion.py  test_coverage.py  test_data_integrity.py  test_data_local.py  test_diatomics.py  test_elasticity.py  test_eos.py  test_eos_bulk.py  test_ev.py  test_external_calculators.py  test_internal_calculators.py  test_md.py  test_mof.py  test_neb.py  test_prefect_serialization.py  test_stability.py  test_tc.py  test_utils.py  test_viscosity.py
(+181 files in other folders)
