[build-system]
requires=["flit_core >=3.2,<4"]
build-backend="flit_core.buildapi"

[project]
name="mlip-arena"
version="0.2.1"
authors=[
    {name="Yuan Chiang", email="cyrusyc@lbl.gov"},
]
description="Fair and transparent benchmark of machine learning interatomic potentials (MLIPs), beyond error-based regression metrics"
readme=".github/README.md"
requires-python=">=3.10"
keywords=[
    "pytorch",
    "machine-learning-interatomic-potentials",
    "huggingface",
    "deep-learning",
    "graph-neural-networks",
]
classifiers=[
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies=[
    "loguru",
    "ase>=3.26.0",
    "pymatgen",
    "torch",
    "huggingface_hub>=1.10.0",
    "datasets",
    "safetensors",
    "prefect[dask]>=3.6.26",
    "dask",
    "dask_jobqueue",
    "tables",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]
app = [
    "streamlit>=1.55.0",
    "plotly",
]
test = [
    "torch>=2.8.0",
    "torch_dftd>=0.4.0",
    "e3nn>=0.5.6",
    "dgl",
    "chgnet>=0.3.8",
    "sevenn>=0.9.3.post1",
    "alignn>=2024.5.27",
    "mattersim>=1.1.2",
    "torchani>=2.7.0",
    "nequip>=0.16.0",
    "upet>=0.2.2",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pymatgen>=2025.1.9",
    "streamlit>=1.55.0",
]
mace = [
    "mace-torch>=0.3.12",
]
matgl = [
    "matgl>=1.2.6",
]
fairchem = [
    "fairchem-core>=2.13.0",
]
orb = [
    "orb-models>=0.4.0,<0.6.0",
]
deepmd = [
    "torch>=2.2.0",
    "deepmd-kit"
]
extra = [
    "MDAnalysis",
    "quests",
    "ipykernel",
    "ipywidgets",
]

[project.urls]
Homepage = "https://github.com/atomind-ai/mlip-arena"
Issues = "https://github.com/atomind-ai/mlip-arena/issues"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-include = ["*.ipynb"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true


[tool.ruff.lint.pydocstyle]
convention = "google"
